<resources>
    <string name="app_name">DigitalOcean</string>

    <!-- //FIXME: @championswimmer
    This is my own token, with read access, now for testing-->
    <string name="do_test_token">5d16bdb68f365472f815159495577e5c2f01590afbd641fdfedc61144eb04ccc</string>

    <string name="do_client_id">3238aae5b35c99c31f6882b3c18f4c23b40c98b96f2b5c7ffae14dfadaf3166f</string>
    <string name="do_client_secret">1a92c568c2a55390f12f89534e945f322e0cd9d5a1c392aa4b678d429d1d736c</string>
    <string name="do_callback_url">http://championswimmer.in/callbackdo</string>

    <string name="empty"> </string>

    <string name="edit_droplet_name">Edit Droplet Name</string>
    <string name="delete_droplet">Delete Droplet</string>
    <string name="switch_off_droplet">Switch Off Droplet</string>
    <string name="power_off_droplet">Power Off Droplet</string>
    <string name="power_on_droplet">Power On Droplet</string>

    <string name="title_activity_droplet">DropletActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ip_address">IP Address:</string>

    <string name="droplet_name">Droplet Name</string>
    <string name="droplet_memory">%1$s MB</string>
    <string name="droplet_disk_size">%1$s GB Disk</string>
    <string name="droplet_region">Region</string>
    <string name="droplet_os">Ubuntu</string>
    <string name="resize_droplet">Resize</string>

    <string name="hint_snapshot_name">Snapshot Name</string>
    <string name="take_snapshot">Snapshot</string>

    <string name="switch_ipv6">IPv6</string>
    <string name="switch_private_network">Private Network</string>
    <string name="switch_backup">Backup</string>

    <string name="ipv6_enabled">IPv6 enabled</string>
    <string name="ipv6_disabled">IPv6 disabled</string>
    <string name="backup_enabled">Backup enabled</string>
    <string name="backup_disabled">Backup disabled</string>
    <string name="private_network_enabled">Private network enabled</string>
    <string name="private_network_disabled">Private network disabled</string>
    <string name="network_error">Network error! Please check your internet connection</string>
    <string name="ipv6_cannot_be_disabled">IPv6 cannot be disabled</string>
    <string name="private_network_cannot_be_disabled">Private network cannot be disabled</string>

    <string name="title_activity_droplet_create">DropletCreateActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="monthly_price">$ %1$s/mo</string>
    <string name="hourly_price">$ %1$s/hour</string>
    <string name="memory">%1$sMB/ %2$sCPU</string>
    <string name="disk_space">%1$sGB SSD disk</string>
    <string name="transfer">%1$sGB transfer</string>

    <string name="rename_droplet">Rename Droplet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country_name">India</string>
    <string name="droplet_specs">Ubuntu-512mb-blr1-01</string>
    <string name="droplet_RAM">512 MB</string>
    <string name="forward_slash">/</string>
    <string name="image_distribution">TEST</string>
    <string name="x86_arch">x86</string>
    <string name="droplet_HDD">20 GB Disk</string>
    <string name="colon">:</string>
    <string name="static_ip_address">192.168.1.1</string>
    <string name="static_droplet_name">Ubuntu-512mb-blr1-01</string>
    <string name="static_droplet_region">Bangalore</string>
    <string name="static_email_account">android.studio@android.com</string>
    <string name="login">Login</string>
    <string name="signup">Sign-Up</string>

    <string name="dialog_delete_droplet_msg">Are you sure you would like to delete %s? This is irreversible. We will destroy your Droplet and all associated backups. All Droplet data will be scrubbed and irretrievable.</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="delete_droplet_msg">Deleting Droplet</string>
    <string name="ipv6_couldnt_be_enabled">IPv6 could not be enabled</string>
    <string name="private_network_couldnt_be_enabled">Private network could not be enabled</string>
    <string name="backup_couldnt_be_enabled">Backup could not be enabled</string>
    <string name="backup_couldnt_be_disabled">Backup could not be disabled</string>

    <string name="please_choose_option">Please choose an option</string>

    <string name="about">About</string>
    <string name="support_development">Support Development</string>
    <string name="github">GitHub</string>
    <string name="github_summary">Fork the repo and push changes or submit new issues.</string>
    <string name="contributors">Contributors</string>
    <string name="contributor1_name">Arnav Gupta</string>
    <string name="contributor1_username">championswimmer</string>
    <string name="contributor2_name">Harshit Dwidedi</string>
    <string name="contributor2_username">the-dagger</string>
    <string name="contributor3_name">Rishabh Khanna</string>
    <string name="contributor3_username">Rishabhk07</string>
    <string name="contributor4_name">Ojasva Jain</string>
    <string name="contributor4_username">ojasvajain</string>
    <string name="contributor5_name">Neeraj Jha</string>
    <string name="contributor5_username">Jonsnow21</string>
    <string name="see_all_contributors">See all contributors</string>

    <string name="signup_url">https://cloud.digitalocean.com/registrations/new</string>
    <string name="token">token</string>
    <string name="checking_token">Checking token...</string>
    <string name="this_token_is_invalid">This token is invalid</string>

    <string name="image_github_desc">Github logo</string>
    <string name="btn_create_droplet">Create Droplet</string>
    <string name="image_digitalocean_desc">DigitalOcean Logo</string>
</resources>
