<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/droplet_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/droplet_name"
                    android:textSize="22sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/droplet_memory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/droplet_memory"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/droplet_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/droplet_disk_size"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/droplet_region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/droplet_region"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/droplet_os"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/droplet_os"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>

                <Button
                    android:id="@+id/edit_droplet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resize_droplet"
                    android:layout_gravity="bottom|end"
                    android:theme="@style/resize"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edittext_snapshot_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_snapshot_name"
                        android:textColorHint="@android:color/black"
                        android:padding="8dp"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/take_droplet_snapshot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:text="@string/take_snapshot"
                    android:theme="@style/snapshot" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_ipv6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/switch_ipv6"
                    android:padding="16dp"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_private_network"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/switch_private_network"
                    android:padding="16dp"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_backup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/switch_backup"
                    android:padding="16dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>